bug fix finded by bala