@@ -1,6 +1,7 @@
 package com.verinite.auth_service.service;
 
 import com.verinite.auth_service.dto.CreateUserRequest;
+import com.verinite.auth_service.dto.UpdateUserRequest;
 import com.verinite.auth_service.dto.UserDto;
 import com.verinite.auth_service.entity.User;
 import com.verinite.auth_service.exception.ResourceNotFoundException;
@@ -13,6 +14,9 @@ import org.junit.jupiter.api.extension.ExtendWith;
 import org.mockito.InjectMocks;
 import org.mockito.Mock;
 import org.mockito.junit.jupiter.MockitoExtension;
+import org.springframework.data.domain.Page;
+import org.springframework.data.domain.PageRequest;
+import org.springframework.data.domain.Sort;
 import org.springframework.security.crypto.password.PasswordEncoder;
 
 import java.util.List;
@@ -25,34 +29,31 @@ import static org.mockito.Mockito.*;
 @ExtendWith(MockitoExtension.class)
 class UserServiceTest {
 
-    @Mock
-    private UserRepository userRepository;
-
-    @Mock
-    private PasswordEncoder passwordEncoder;
+    @Mock private UserRepository userRepository;
+    @Mock private PasswordEncoder passwordEncoder;
 
     @InjectMocks
     private UserServiceImpl userService;
 
     private User mockUser;
-    private CreateUserRequest createRequest;
+    private CreateUserRequest createRequest; // FIX ①: was `UpdateUserRequest` — they're separate classes
 
     @BeforeEach
     void setUp() {
         mockUser = User.builder()
                 .id(1L)
-                .username("bala")
+                .username("testuser")
                 .passwordHash("hashed123")
-                .fullName("Bala R")
-                .avatarInitials("BR")
+                .fullName("Test User")
+                .avatarInitials("TU")
                 .role(Role.ADMIN)
                 .active(true)
                 .build();
 
         createRequest = new CreateUserRequest();
-        createRequest.setUsername("bala");
+        createRequest.setUsername("testuser");
         createRequest.setPassword("password123");
-        createRequest.setFullName("Bala R");
+        createRequest.setFullName("Test User");
         createRequest.setRole(Role.ADMIN);
     }
 
@@ -60,29 +61,24 @@ class UserServiceTest {
 
     @Test
     void createUser_Success() {
-        when(userRepository.findByUsername("bala"))
-                .thenReturn(Optional.empty());
-        when(passwordEncoder.encode("password123"))
-                .thenReturn("hashed123");
-        when(userRepository.save(any(User.class)))
-                .thenReturn(mockUser);
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.empty());
+        when(passwordEncoder.encode("password123")).thenReturn("hashed123");
+        when(userRepository.save(any(User.class))).thenReturn(mockUser);
 
         UserDto result = userService.createUser(createRequest);
 
         assertThat(result).isNotNull();
-        assertThat(result.getUsername()).isEqualTo("bala");
-        assertThat(result.getAvatarInitials()).isEqualTo("BR");
+        assertThat(result.getUsername()).isEqualTo("testuser");
+        assertThat(result.getAvatarInitials()).isEqualTo("TU");
         assertThat(result.getRole()).isEqualTo(Role.ADMIN);
         verify(userRepository).save(any(User.class));
     }
 
     @Test
     void createUser_DuplicateUsername_ThrowsException() {
-        when(userRepository.findByUsername("bala"))
-                .thenReturn(Optional.of(mockUser));
+        when(userRepository.findByUsername("testuser")).thenReturn(Optional.of(mockUser));
 
-        assertThatThrownBy(() ->
-                userService.createUser(createRequest))
+        assertThatThrownBy(() -> userService.createUser(createRequest))
                 .isInstanceOf(RuntimeException.class)
                 .hasMessageContaining("Username already exists");
 
@@ -93,45 +89,38 @@ class UserServiceTest {
 
     @Test
     void getAllUsers_ReturnsActiveUsers() {
-        when(userRepository.findByDeletedAtIsNull())
-                .thenReturn(List.of(mockUser));
+        when(userRepository.findByDeletedAtIsNull()).thenReturn(List.of(mockUser));
 
-        List<UserDto> result = userService.getAllUsers();
+        Page<UserDto> result = userService.getAllUsers(PageRequest.of(0, 20, Sort.by("username").ascending()));
 
         assertThat(result).hasSize(1);
-        assertThat(result.get(0).getUsername()).isEqualTo("bala");
+        assertThat(result.get().toList().getFirst().getUsername()).isEqualTo("testuser");
     }
 
     @Test
     void getAllUsers_Empty_ReturnsEmptyList() {
-        when(userRepository.findByDeletedAtIsNull())
-                .thenReturn(List.of());
+        when(userRepository.findByDeletedAtIsNull()).thenReturn(List.of());
 
-        List<UserDto> result = userService.getAllUsers();
-
-        assertThat(result).isEmpty();
+        assertThat(userService.getAllUsers(PageRequest.of(0, 20, Sort.by("username").ascending()))).isEmpty();
     }
 
     // ─── getUserById ──────────────────────────────────────
 
     @Test
     void getUserById_Found_ReturnsDto() {
-        when(userRepository.findById(1L))
-                .thenReturn(Optional.of(mockUser));
+        when(userRepository.findById(1L)).thenReturn(Optional.of(mockUser));
 
         UserDto result = userService.getUserById(1L);
 
         assertThat(result.getId()).isEqualTo(1L);
-        assertThat(result.getUsername()).isEqualTo("bala");
+        assertThat(result.getUsername()).isEqualTo("testuser");
     }
 
     @Test
     void getUserById_NotFound_ThrowsException() {
-        when(userRepository.findById(99L))
-                .thenReturn(Optional.empty());
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() ->
-                userService.getUserById(99L))
+        assertThatThrownBy(() -> userService.getUserById(99L))
                 .isInstanceOf(ResourceNotFoundException.class)
                 .hasMessageContaining("99");
     }
@@ -140,40 +129,40 @@ class UserServiceTest {
 
     @Test
     void updateUser_Success_UpdatesFields() {
-        CreateUserRequest updateRequest = new CreateUserRequest();
-        updateRequest.setUsername("bala");
-        updateRequest.setPassword("pass");
-        updateRequest.setFullName("Bala Rajan");
+        // FIX ②: was `new CreateUserRequest()` assigned to UpdateUserRequest — wrong type
+        UpdateUserRequest updateRequest = new UpdateUserRequest();
+        updateRequest.setFullName("Updated Name");
         updateRequest.setRole(Role.ANALYST);
 
         User updatedUser = User.builder()
                 .id(1L)
-                .username("bala")
+                .username("testuser")
                 .passwordHash("hashed123")
-                .fullName("Bala Rajan")
-                .avatarInitials("BR")
+                .fullName("Updated Name")
+                .avatarInitials("TU")
                 .role(Role.ANALYST)
                 .active(true)
                 .build();
 
-        when(userRepository.findById(1L))
-                .thenReturn(Optional.of(mockUser));
-        when(userRepository.save(any(User.class)))
-                .thenReturn(updatedUser);
+        when(userRepository.findById(1L)).thenReturn(Optional.of(mockUser));
+        when(userRepository.save(any(User.class))).thenReturn(updatedUser);
 
         UserDto result = userService.updateUser(1L, updateRequest);
 
-        assertThat(result.getFullName()).isEqualTo("Bala Rajan");
+        assertThat(result.getFullName()).isEqualTo("Updated Name");
         assertThat(result.getRole()).isEqualTo(Role.ANALYST);
     }
 
     @Test
     void updateUser_NotFound_ThrowsException() {
-        when(userRepository.findById(99L))
-                .thenReturn(Optional.empty());
+        // FIX ②: was passing `createRequest` (CreateUserRequest) where UpdateUserRequest expected
+        UpdateUserRequest updateRequest = new UpdateUserRequest();
+        updateRequest.setFullName("Any Name");
+        updateRequest.setRole(Role.ANALYST);
 
-        assertThatThrownBy(() ->
-                userService.updateUser(99L, createRequest))
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
+
+        assertThatThrownBy(() -> userService.updateUser(99L, updateRequest))
                 .isInstanceOf(ResourceNotFoundException.class);
     }
 
@@ -181,10 +170,8 @@ class UserServiceTest {
 
     @Test
     void deleteUser_Success_SoftDelete() {
-        when(userRepository.findById(1L))
-                .thenReturn(Optional.of(mockUser));
-        when(userRepository.save(any(User.class)))
-                .thenReturn(mockUser);
+        when(userRepository.findById(1L)).thenReturn(Optional.of(mockUser));
+        when(userRepository.save(any(User.class))).thenReturn(mockUser);
 
         userService.deleteUser(1L);
 
@@ -194,11 +181,9 @@ class UserServiceTest {
 
     @Test
     void deleteUser_NotFound_ThrowsException() {
-        when(userRepository.findById(99L))
-                .thenReturn(Optional.empty());
+        when(userRepository.findById(99L)).thenReturn(Optional.empty());
 
-        assertThatThrownBy(() ->
-                userService.deleteUser(99L))
+        assertThatThrownBy(() -> userService.deleteUser(99L))
                 .isInstanceOf(ResourceNotFoundException.class);
     }
 }
